--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ project(          DebugWindow VERSION 0.1
                   DESCRIPTION "DebugWindow"
                   LANGUAGES CXX)
 
+# My real world use case is for highly compatible drop-in inclusion into unfamiliar codebases,
+# so I target a lower C++ standard than normal.
 set(CMAKE_CXX_STANDARD 14)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE INCLUDES "include/*.h*")
 
+# Provides heirarchical filters in Visual Studio
 source_group(TREE "${PROJECT_SOURCE_DIR}" FILES ${SOURCES})
 source_group(TREE "${PROJECT_SOURCE_DIR}" FILES ${INCLUDES})
 
